ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.12
    • Affects Version/s: None
    • Component/s: Storage
    • Fully Compatible
    • ALL
    • Storage NYC 2019-05-20, Execution Team 2019-06-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is a test-only fix.
      SERVER-39514 blacklisted a bunch of idempotency unit tests because the change exposed a problem: Those tests didn't put UUIDs to the 'ui' fields of oplog entries, causing createCollectionForApplyOps to bypass this check ans the code path and tried to create another collection with the same UUID.

      Before SERVER-39514, on creating a new collection, UUIDCatalog unconfidently deregister the UUID if it already exists. SERVER-39514 added an assertion that the UUID should never be there, thus catching this bug.

      The fix would be to always attach uuid to these oplog entries.
      The affected tests are:
      idempotency_test
      sync_tail_test
      rs_rollback_test

      `git grep SERVER-40452` for all the places.

            Assignee:
            Xiangyu Yao (Inactive)
            Reporter:
            Xiangyu Yao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: