SERVER-40452 Attach uuid to createCollection oplog entry in idempotency tests